Fix visibility of the content of a secondary sidebar

--- a/assets/css/sensei-course-theme/sidebar-mobile-menu.scss
+++ b/assets/css/sensei-course-theme/sidebar-mobile-menu.scss
@@ -50,6 +50,9 @@ $breakpoint: 783px;
 				pointer-events: all;
 			}
 
+			.sensei-course-theme__secondary-sidebar {
+				top: unset;
+			}
 		}
 
 		&__sidebar {
